<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signInPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:elevation="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingTop="30dp">


        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_email"
            android:textColor="#fff"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:textColor="#fff"
            android:inputType="textPassword" />

                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/borderless_button"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Sign In"
                    android:textColor="@color/cast_expanded_controller_background_color"
                    android:textStyle="bold"
                    android:visibility="visible" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/not_registered"
                    android:textAlignment="center"
                    android:textColor="@color/cast_expanded_controller_background_color" />

                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Forgot Password? Click here"
                    android:textAlignment="center"
                    android:textColor="@color/cast_expanded_controller_background_color" />
    </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>