<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signUpPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/account_login_gradient"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/info_layout"
        android:background="@color/colorPrimary">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:elevation="4dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingTop="35dp">

                <!--android:src="@drawable/profile_icon"-->

                <!--<ImageView-->
                    <!--android:id="@+id/user_profile_photo"-->
                    <!--android:layout_width="100dp"-->
                    <!--android:layout_height="100dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:background="@drawable/user_profile_image_background"-->
                    <!--android:scaleType="centerCrop" />-->

                <!--<Button-->
                    <!--android:id="@+id/set_photo_button"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:background="@drawable/borderless_button"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--android:paddingRight="10dp"-->
                    <!--android:text="@string/set_profile_photo"-->
                    <!--android:textAllCaps="false"-->
                    <!--android:textColor="#FFF"-->
                    <!--android:textStyle="bold"-->
                    <!--android:visibility="visible" />-->

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20sp"
                    android:layout_marginTop="25sp"
                    android:src="@mipmap/ic_launcher" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:drawableTint="#f5913f"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:drawableTint="#f5913f"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:drawableTint="#f5913f"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColor="#FFF"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/borderless_button"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/cast_expanded_controller_background_color"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textViewSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/already_account"
                    android:textColor="@color/cast_expanded_controller_background_color" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>